--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-.min-h-screen{
+/* .min-h-screen{
     background-color: #1f2937;
-}
-h1,h2,h3, a, Link {
+} */
+h1,h2, a {
     color: white;
 }
 h1{
@@ -13,4 +13,43 @@ h1{
 }
 h2{
     font-size:1.7em;
+}
+h3{
+    font-size:1.5em;
+}
+.content-div {
+    /* Container */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 24px 20px;
+    
+    align-self:center;
+    bottom: 180px;
+    /* white */
+    background: #FFFFFF;
+    /* /shadow/base */
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+    margin-top:-25%;
+}
+.customheader{
+    background-color: #1f2937;
+    
+}
+.customheader a{
+    height:fit-content;
+}
+.height50vh{
+    height:50vh;
+}
+.statdiv{
+    height:120px;
+    margin:2vw;
+    padding:20px;
+    width: 40%;
+}
+.statdiv a{
+    color:#6366F1;
 }
